@@ -281,8 +281,11 @@ SEXP eval(SEXP e, SEXP rho)
 
     int depthsave = R_EvalDepth++;
 
+    /* We need to explicit set a NULL call here to circumvent attempts
+       to deparse the call in the error-handler */
     if (R_EvalDepth > R_Expressions)
-	error("evaluation nested too deeply: infinite recursion / options(expression=)?");
+	errorcall(R_NilValue,
+  "evaluation nested too deeply: infinite recursion / options(expression=)?");
     if (++evalcount > 100) {
 	R_CheckUserInterrupt();
 	evalcount = 0 ;
